crates/validation/tests/snapshots/scenario_tests__cross_entity_name_prefixes_and_duplicates.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors

---
[
    Error {
        scope: test://example/catalog.yaml#/captures/testing~1b~11,
        error: capture testing/b/1 collides with collection testing/b/1, defined at test://example/catalog.yaml#/collections/testing~1b~11,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/testing~1b~11,
        error: collection testing/b/1 is a prohibited prefix of materialization testing/b/1/suffix, defined at test://example/catalog.yaml#/materializations/testing~1b~11~1suffix,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/testing~1b~12,
        error: collection testing/b/2 collides with materialization testing/b/2, defined at test://example/catalog.yaml#/materializations/testing~1b~12,
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/testing~1b~12,
        error: materialization testing/b/2 is a prohibited prefix of capture testing/b/2/suffix, defined at test://example/catalog.yaml#/captures/testing~1b~12~1suffix,
    },
    Error {
        scope: test://example/catalog.yaml#/captures/testing~1b~13,
        error: capture testing/b/3 collides with materialization testing/b/3, defined at test://example/catalog.yaml#/materializations/testing~1b~13,
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/testing~1b~13,
        error: materialization testing/b/3 is a prohibited prefix of collection testing/b/3/suffix, defined at test://example/catalog.yaml#/collections/testing~1b~13~1suffix,
    },
    Error {
        scope: test://example/catalog.yaml#/captures/testing~1b~11,
        error: driver error while validating capture testing/b/1
        
        Caused by:
            driver fixture not found: testing/b/1,
    },
    Error {
        scope: test://example/catalog.yaml#/captures/testing~1b~12~1suffix,
        error: driver error while validating capture testing/b/2/suffix
        
        Caused by:
            driver fixture not found: testing/b/2/suffix,
    },
    Error {
        scope: test://example/catalog.yaml#/captures/testing~1b~13,
        error: driver error while validating capture testing/b/3
        
        Caused by:
            driver fixture not found: testing/b/3,
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/testing~1b~11~1suffix,
        error: driver error while validating materialization testing/b/1/suffix
        
        Caused by:
            driver fixture not found: testing/b/1/suffix,
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/testing~1b~12,
        error: driver error while validating materialization testing/b/2
        
        Caused by:
            driver fixture not found: testing/b/2,
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/testing~1b~13,
        error: driver error while validating materialization testing/b/3
        
        Caused by:
            driver fixture not found: testing/b/3,
    },
]
