crates/validation/tests/snapshots/scenario_tests__data_plane_not_found.snap
---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-string-captures#/captures/testing~1db-cdc,
        error: testing/db-cdc requires data plane 1d1d1d1d1d1d1d1d, which was not found,
    },
    Error {
        scope: test://example/int-string-captures#/captures/testing~1s3-source,
        error: testing/s3-source requires data plane 1d1d1d1d1d1d1d1d, which was not found,
    },
    Error {
        scope: test://example/from-array-key#/collections/testing~1from-array-key/derive,
        error: testing/from-array-key requires data plane 1d1d1d1d1d1d1d1d, which was not found,
    },
    Error {
        scope: test://example/int-halve#/collections/testing~1int-halve/derive,
        error: testing/int-halve requires data plane 1d1d1d1d1d1d1d1d, which was not found,
    },
    Error {
        scope: test://example/int-reverse#/collections/testing~1int-reverse/derive,
        error: testing/int-reverse requires data plane 1d1d1d1d1d1d1d1d, which was not found,
    },
    Error {
        scope: test://example/db-views#/materializations/testing~1db-views,
        error: testing/db-views requires data plane 1d1d1d1d1d1d1d1d, which was not found,
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries,
        error: testing/webhook/deliveries requires data plane 1d1d1d1d1d1d1d1d, which was not found,
    },
]
