crates/validation/tests/snapshots/scenario_tests__dekaf_materialization_invalid.snap
---
source: crates/validation/tests/scenario_tests.rs
assertion_line: 98
expression: outcome
---
Outcome {
    built_captures: [],
    built_collections: [],
    built_materializations: [],
    built_tests: [],
    captures: [],
    collections: [],
    errors: [],
    errors_draft: [
        Error {
            scope: test://example/catalog.yaml,
            error: failed to parse document (invalid type: boolean `false`, expected struct DekafConfig at line 1 column 215): invalid type: boolean `false`, expected struct DekafConfig at line 1 column 215,
        },
    ],
    fetches: [
        Fetch {
            depth: 1,
            resource: test://example/catalog.yaml,
        },
    ],
    imports: [],
    materializations: [],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CATALOG",
            content: ".. binary ..",
            content_dom: {"collections":{"testing/schema_with_properties":{"key":["/id"],"schema":{"properties":{"id":{"type":"string"}},"required":["id"],"type":"object"}}},"materializations":{"bad":{"bindings":[],"endpoint":{"dekaf":false}}}},
        },
    ],
    storage_mappings: [
        StorageMapping {
            catalog_prefix: ,
            control_id: "0000000000000000",
            stores: [
              {
                "provider": "S3",
                "bucket": "a-bucket",
                "prefix": null,
                "region": null
              }
            ],
        },
    ],
    tests: [],
}
